<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/settings_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <!-- Botón para cambiar idioma -->
        <Button
            android:id="@+id/buttonChangeLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_change_language"
            android:textSize="18sp"
            android:layout_marginBottom="12dp" />

        <!-- Botón para eliminar Pokémon -->
        <Button
            android:id="@+id/buttonDeletePokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_pokemon_option"
            android:layout_marginBottom="16dp" />

        <!-- Botón Acerca de -->
        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_marginBottom="16dp" />

        <!-- Botón Cerrar sesión -->
        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout" />
    </LinearLayout>
</ScrollView>
