<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_margin="8dp"
    android:padding="16dp"
    tools:context=".ui.captured_pokemon.CapturedPokemonFragment">

    <!-- LinearLayout para contener la imagen, el nombre y el icono de borrar -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pokemonLightLightBlue"
        android:gravity="center_vertical">

        <!-- Imagen del Pokémon -->
        <ImageView
            android:id="@+id/pokemon_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/pokemon_image_desc"
            android:src="@drawable/ic_pokemon_captured" />

        <!-- Nombre del Pokémon -->
        <TextView
            style="@style/H1"
            android:id="@+id/pokemon_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="@string/app_character_name"
            android:textColor="@android:color/black" />

        <!-- Botón de borrar -->
        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/delete_item_desc"
            android:src="@drawable/ic_delete"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

